# atd-lsp

./: .gitignore  CHANGELOG.md  README.md  atd_lsp.opam  dune-project  init.lua
client/: extension.ts  package.json  tsconfig.json
lib/: atd_lsp_lib.ml  dune
test/: dune  test_atd_lsp.ml
test/artifacts/: sample.atd
